<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SafeCo App</string>

    <!-- App IDs, Keys -->
    <string name="parse_application_id">aXJ2RFlFf3RJv1GtVGanUuFKMhEPwVs2dDht1sU4</string>
    <string name="parse_client_key">rRw3MHelLTEruqJZD9pil2hDN9nxrywUYEAXYX2x</string>
    <string name="facebook_app_id">852948624738586</string>
    <string name="youtube_developer_key">YOUR_YOUTUBE_DEVELOPER_KEY</string>
    <string name="action_settings">Settings</string>
    <string name="menu_title">SafeCo </string>
    <string name="action_schedule">Schedule</string>
    <string name="action_my_schedule">My Schedule</string>
    <string name="action_alerts">Alerts</string>
    <string name="action_maps">View Map</string>
    <string name="map_description_accessible">Venue Map</string>
    <string name="nothing">Nothing Here</string>
    <string name="no_alerts">You\'re all caught up with messages.</string>
    <string name="build">LET\'S BUILD</string>
    <string name="dev_con">Facebook Developer Conference</string>
    <!-- <string name="privacy_policy">By logging in, you agree to our \n <a href="https://m.facebook.com/terms">Terms</a> and <a href="https://m.facebook.com/policy">Privacy Policy</a> \n \n <a href="https://gist.github.com/beardouglas/11349951">About</a></string> -->
    <string name="privacy_policy">By logging in, you agree to our \n <a href="https://m.facebook.com/terms">Terms</a> and <a href="https://m.facebook.com/policy">Privacy Policy</a>first</string>
    <string name="add_favorite">Add to My Schedule</string>
    <string name="remove_favorite">Remove from My Schedule</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="session_invalid_error">Your current session is no longer valid. Please log in again.</string>
    <string name="logn_generic_error">Something went wrong. Please retry.</string>
    <string name="show_posts_error">Error: Data could not be fetched from Parse Server.</string>
    <string name="device_offline_message">"Your device appears to be offline. Some content may be unavailable."</string>
    <string name="terms_privacy">Terms and Privacy</string>
    <string name="terms_link">https://m.facebook.com/policies?_rdr</string>
    <string name="play_video">Watch the Video</string>
    <string name="description_checkmark">Checked</string>
    <string name="map_title_morning">MORNING</string>
    <string name="map_title_afternoon">AFTERNOON</string>
    <string name="map_title_evening">EVENING</string>
    <string name="welcome_message">Welcome, %1$s</string>

    <string-array name="drawer_schedule_content">
        <item>Welcome</item>
        <item>Registration</item>
        <item>Keynotes</item>
        <item>Lunch Break</item>
        <item>Build</item>
        <item>Grow</item>
        <item>Monetize</item>
        <item>The Hacker Way</item>
        <item>The Garage</item>
        <item>Games Lounge</item>
        <item>Internet.org</item>
        <item>After Party</item>
    </string-array>
    <string-array name="drawer_schedule_times">
        <item></item>
        <item>8:00 AM</item>
        <item>10:00 AM</item>
        <item>11:30 AM</item>
        <item>12:30 PM</item>
        <item>12:30 PM</item>
        <item>12:30 PM</item>
        <item>12:30 PM</item>
        <item>All Day</item>
        <item>All Day</item>
        <item>All Day</item>
        <item>5:30 PM</item>
    </string-array>

    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home_fragment">HomeFragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_setting_fragment">Setting Fragment</string>
    <string name="title_activity_profile_fragment">Profile Fragment</string>
    <string name="title_activity_setting_adv_main">Advanced Setting Fragment</string>
    <string name="title_activity_setting_adv_entry">Advanced Setting Fragment_Entry</string>

    <string-array name="advsetting_list_items">
        <item>Add new entry</item>
        <item>View/edit list</item>
    </string-array>
    <string-array name="adventry_list_items">
        <item>Time</item>
        <item>Location</item>
        <item>Co-User</item>
        <item>Viewer-User</item>
        <item>Privacy Level</item>
    </string-array>
    <string-array name="spinner_time_list">
        <item>Select a time period...v</item>
        <item>Every Sunday</item>
        <item>Every Monday</item>
        <item>Every Tuesday</item>
        <item>Every Wednesday</item>
        <item>Every Thursday</item>
        <item>Every Friday</item>
        <item>Every Saturday</item>
        <item>Every Weekend</item>
        <item>Every Day</item>
        <item>Specific Date</item>
    </string-array>

    <string name="spinner_advTime_prompt">Select a time period:</string>
    <string name="select_location">Select the location on the map:</string>
    <string name="no_address">No address selected...</string>
    <string name="select_couser">Select the users who have co-location:</string>
    <string name="restricted_list">"Restricted List"</string>
    <string name="advanced_settings"><u>Advanced Settings...</u></string>
    <string name="Add_new_entry">Add a new entry:</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="default_address">RWTH Aachen Informatik-Zentrum, Ahornstraße 55 , 52074 Aachen</string>
    <string name="title_activity_picker">PickerActivity</string>
    
    <string name="about">About</string>
    <string name="signout">Signout</string>
    <string name="exit">Exit</string>
    <string name="about_text">This app aims to protect users privacy against co-location disclosures in Online Social Networks. \nMoreover, this app has been designed to fulfill the master thesis project. \nIf you have any question, contact me via my email address at: \nmasood.azizi@rwth-aachen.de</string>
    <string name="help_time">In this Setting, you specify the time when you want to restrict your co-location privacy.</string>
    <string name="help_location">You can restrict your co-location privacy by selecting a point on the map. Then, you privacy gets applied on a radius of half kilometer. </string>
    <string name="help_couser">You choose friends with whom you do not want your privacy get disclosed</string>
    <string name="help_viuser">Select friends who are restricted to view posts you are tagged in</string>
    <string name="help_privacy">Specify the privacy level you want to apply on restricted items</string>
    <string name="help_adventry">There are 5 items can be configured to add a new entry.\nYou have to set at least one of the first four items as well as last item. Privacy profile applies users privacy on the other items which are set. The default profile is "Normal"</string>
    <string name="help_advmain">In Advanced settings, you are able to add a new entry in the list, or edit/remove existing entries.</string>
    <string name="noAdvItemInfo">There is no restricted list defined in your profile. If you need to make a restricted Item in your privacy preferences, please go back and add a new item.</string>
    <string name="not_set">&lt;Not Set&gt;</string>
    <string name="pick_friend">In this version of app, you should type the name of friend by such a pattern "Bob, Alice".\nIn the further versions you will be able to pick friends via Facebook API.</string>

</resources>
